# game

./: .env  .gitmodules  .lefthook.yaml  Cargo.toml  clippy.toml  env.sh  justfile
.lefthook/commit-msg/: template-checker
crates/binary/: Cargo.toml
crates/binary/src/: main.rs
crates/engine/: Cargo.toml
crates/engine/src/: animation.rs  camera.rs  coords.rs  events.rs  hooks.rs  lib.rs  math.rs  serde.rs  tile_map.rs  types.rs
crates/engine/src/resources/: manager.rs  mod.rs  sprite_map.rs
crates/engine/src/tile_map/: mask.rs  mod.rs
crates/game/: Cargo.toml
crates/game/src/: consts.rs  coords.rs  global_state.rs  lib.rs  zorb.rs
crates/game/src/ecs/: components.rs  mod.rs
crates/game/src/ecs/systems/: debug.rs  draw.rs  mod.rs  navigation.rs  physics.rs
crates/game/src/spawnables/: mod.rs  terrain.rs  zorb.rs
crates/math/: Cargo.toml
crates/math/src/: lib.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
crates/xtask/: Cargo.toml  clippy.toml
crates/xtask/src/: main.rs
crates/xtask/src/codegen/: mod.rs  tile_arrays.rs
