[workspace]
resolver = "3"
members = [ 
    "crates/binary", "crates/game", "crates/engine"
]

[workspace.dependencies]
sdl3 = { version = "0.14", features = ["build-from-source", "image"] }
allocator-api2 = "0.3.0"
anyhow = "1"
euclid = "0.22"
thiserror = "2" 
libloading = "0.8" 
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.27"
strum_macros = "0.27"
