[workspace]
resolver = "3"
members = [ 
    "crates/binary", "crates/game", "crates/engine"
]

[workspace.dependencies]
sdl3 = { version = "0.14", features = ["build-from-source", "image"] }
allocator-api2 = "0.3.0"
anyhow = "1"
euclid = { version = "0.22", features = ["serde"] }
thiserror = "2" 
libloading = "0.8" 
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
