[package]
name = "binary"
version = "0.1.0"
edition = "2024"

[dependencies]
backtrace-on-stack-overflow = "0.3.0"

engine = { path = "../engine" }

allocator-api2 = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
sdl3 = { workspace = true }
libloading = { workspace = true }

[features]
nightly = []

[lints]
workspace = true
