[package]
name = "game"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["dylib"]

[dependencies]
engine = { path = "../engine" }

allocator-api2 = { workspace = true }
anyhow = { workspace = true }
sdl3 = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }


[features]
nightly = []
