[package]
name = "game"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["dylib"]

[dependencies]
engine = { path = "../engine" }

allocator-api2 = { workspace = true }
anyhow = { workspace = true }
derivative = { workspace = true }
heapless = { workspace = true }
sdl3 = { workspace = true }
paste = { workspace = true }

[features]
nightly = []

[lints]
workspace = true

